// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component renders and matches a snapshot 1`] = `
<div
  className="field"
>
  <p
    className="control"
  >
    <input
      autoComplete="off"
      className="input"
      disabled={false}
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      type="text"
    />
  </p>
</div>
`;

exports[`TextField component renders and matches a snapshot when there is an error 1`] = `
<div
  className="field"
>
  <p
    className="control"
  >
    <input
      autoComplete="username"
      className="input error"
      disabled={true}
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      placeholder="some placeholder"
      type="textarea"
    />
    <span
      className="error"
    >
      something wrong happened
    </span>
  </p>
</div>
`;
